# Hackaton2Phase5

Advance-Claude-Development-phase-5-main/: .env.example  .gitignore  README.md
Advance-Claude-Development-phase-5-main/.github/workflows/: ci.yml  deploy.yml
Advance-Claude-Development-phase-5-main/.specify/memory/: constitution.md
Advance-Claude-Development-phase-5-main/backend/: Dockerfile  pyproject.toml  requirements.txt
Advance-Claude-Development-phase-5-main/backend/alembic/: env.py
Advance-Claude-Development-phase-5-main/backend/alembic/versions/: 001_initial_schema.py
Advance-Claude-Development-phase-5-main/backend/app/: config.py  database.py  logging_config.py  main.py
Advance-Claude-Development-phase-5-main/backend/app/api/: chat.py  deps.py  health.py  tags.py  tasks.py
Advance-Claude-Development-phase-5-main/backend/app/mcp/: agent.py  tools.py
Advance-Claude-Development-phase-5-main/backend/app/models/: __init__.py  completion.py  conversation.py  reminder.py  tag.py  task.py  user.py
Advance-Claude-Development-phase-5-main/backend/app/services/: event_publisher.py  reminder_service.py  search_service.py  tag_service.py  task_service.py
Advance-Claude-Development-phase-5-main/backend/tests/: test_health.py
Advance-Claude-Development-phase-5-main/frontend/: Dockerfile  package.json
Advance-Claude-Development-phase-5-main/helm/backend/: Chart.yaml  values-cloud.yaml  values.yaml
Advance-Claude-Development-phase-5-main/helm/frontend/: Chart.yaml  values-cloud.yaml  values.yaml
(+62 files in other folders)
